Lazy header image

--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,9 +1,10 @@
 <div class="container-fluid g-0">
   <div class="row d-flex justify-content-center g-0">
-    <div class="offer-image">
-      <div class="text-center pt-5 title img-text-shaddow">Oferta</div>
+    <div class="img-header-container">
+      <img class="img-header" ngSrc="offer/offer.avif" fill priority>
+      <div class="text-center pt-5 header-title img-text-shaddow">Oferta</div>
     </div>
-    <div class="row p-5 d-flex offer-container">
+    <div class="row pt-4 pb-5 d-flex offer-container">
       <div class="col-12 col-md-6 px-5 border-right">
         <div class="text-center py-4 subtitle">Projekt koncepcyjny</div>
         <div class="caption">
@@ -67,6 +68,5 @@
         </ul>
       </div>
     </div>
-    <div class="offer-image-footer"></div>
   </div>
 </div>
