--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,28 @@ body {
   text-shadow: 1px 1px 3px rgb(91, 91, 91);
 }
 
+.img-header-container {
+  position: relative;
+  height: 60vh;
+}
+
+.img-header {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.header-title {
+  color: white;
+  text-transform: uppercase;
+  font-size: 3rem;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media (max-width: 1199.98px) {
   html {
     font-size: 15px;
