--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <img class="main-image" ngSrc="home/main-photo.avif" fill priority>
   <div class="container d-flex flex-column justify-content-end">
     <div class="row mb-5 justify-content-center">
-      <div class="col-7">
+      <div class="col-10 col-md-7">
         <img src="home/logo2.svg" class="logo" alt="logo"/>
         <div class="mt-4 title img-text-shaddow">
           Nieszablonowe wnętrza zaprojektowane według Twoich potrzeb!
