Fix header text

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -2,7 +2,7 @@
   <div class="row d-flex justify-content-center g-0">
     <div class="img-header-container">
       <img class="img-header" ngSrc="portfolio-preview/1.avif" fill priority>
-      <div class="text-center pt-5 header-title img-text-shaddow">Projekty</div>
+      <div class="text-center pt-5 header-title">Projekty</div>
     </div>
     <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between">
       <div *ngFor="let project of projects" class="col-12 col-md-6 col-xl-4 py-4">
