--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -2,7 +2,7 @@
   <div class="row d-flex justify-content-center g-0">
     <div class="img-header-container">
       <img class="img-header" ngSrc="offer/offer.avif" fill priority>
-      <div class="text-center pt-5 header-title img-text-shaddow">Oferta</div>
+      <div class="text-center pt-5 header-title">Oferta</div>
     </div>
     <div class="row pt-4 pb-5 d-flex offer-container">
       <div class="col-12 col-md-6 px-5 border-right">
