--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,6 +94,7 @@ body {
   color: white;
   text-transform: uppercase;
   font-size: 3rem;
+  font-weight: 300;
   position: absolute;
   top: 80%;
   left: 50%;
