--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid p-5 g-0">
-    <div class="container p-5 g-0">
+<div class="container-fluid py-5 g-0">
+    <div class="container py-5 g-0">
       <div class="d-flex justify-content-center title privacy-policy">
         Polityka prywatności
       </div>
