--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,31 +2,55 @@
   <div class="row d-flex p-5 justify-content-center g-0">
     <div class="title pt-5 pb-3">mgr inż. arch. Simona Lorenc</div>
     <div class="pb-3 caption text-container">
-        <div>
-            Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
-            doświadczenie zdobywałam, pracując dla polskich i zagranicznych pracowni
-            architektonicznych. Moim celem jest tworzenie przestrzeni, które w pełni
-            wykorzystują dostępne miejsce, zapewniając jednocześnie funkcjonalność.
-            Wierzę, że kluczem do udanego projektu są przemyślane rozwiązania, które
-            odpowiadają na potrzeby użytkowników, a równowaga między praktycznością a
-            estetyką to fundament każdego projektu.
-        </div>
-        <div class="py-4 subtitle">W czym mogę Ci pomóc?</div>
-        <div>
-            Projektowanie wnętrz jest moją pasją, a moja praca cechuje się
-            sumiennością, kreatywnością i ambicją. Tworzę przestrzenie, które są nie
-            tylko piękne i praktyczne, ale także spójne i idealnie dopasowane do
-            oczekiwań Klienta. Każdy element wnętrza, który projektuję, stanowi
-            integralną część harmonijnej całości. Podstawą udanej współpracy jest dla mnie dobra komunikacja i wzajemne zrozumienie. Swoje usługi kieruję do osób, które doceniają wyjątkowy design i oryginalne rozwiązania.
-        </div>
-        <div class="py-4 subtitle">Jak pracuję?</div>
-        <div>
-            Każdy projekt zaczynam od rozmowy z Klientem - zadaję dużo szczegółowych pytań, aby jak najlepiej poznać styl oraz preferencje Klienta. Ustalamy wytyczne projektowe, omawiamy inspiracje. Jeśli Klient mieszka w Krakowie, Mielcu lub okolicach spotykamy się osobiście; w przypadku innych lokalizacji organizujemy spotkanie online. Następnie podsumowuję nasze ustalenia i przesyłam Klientowi do zatwierdzenia lub uzupełnienia.<br><br>
-            Kolejnym krokiem jest przeprowadzenie inwentaryzacji, czyli dokładnego pomiaru budynku lub mieszkania. Pomiary wykonuję dalmierzem laserowym i nanoszę je na odręczne rysunki. Jeśli projekt realizujemy bez inwentaryzacji, ten krok pomijamy, jednak w zamian potrzebuję rzutu od dewelopera.<br><br>
-            Po ustaleniach i opracowaniu rzutu przygotowuję rzuty funkcjonalne, czyli płaskie rysunki przedstawiające przyszły układ pomieszczeń i mebli. Zwykle opracowuję 3-4 warianty takich rzutów. Po wybraniu przez klienta jednego z nich przechodzimy do etapu wizualizacji.<br><br>
-            Wizualizacje pokazują przyszły wygląd wnętrza - są to realistyczne obrazy, które wyglądają niemal jak zdjęcia. Po zapoznaniu się z wizualizacjami klient może je zaakceptować lub zgłosić poprawki, które następnie wdrażam, aby efekt w pełni odpowiadał oczekiwaniom.<br><br>
-            Ostatnim etapem kompleksowego projektu wnętrz są rysunki wykonawcze, tworzone po zatwierdzeniu wizualizacji. Przedstawiają one projekt w sposób umożliwiający realizację przez wykonawców bez dodatkowych pytań, zawierając dokładne wymiary, lokalizację i materiały wszystkich elementów. Równolegle opracowuję specyfikację wyposażenia, która obejmuje linki do sklepów i ilość wszystkich materiałów użytych w projekcie.
-        </div>
+      <div>
+        Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
+        doświadczenie zdobywałam, pracując dla polskich i zagranicznych pracowni
+        architektonicznych. Moim celem jest tworzenie przestrzeni, które w pełni
+        wykorzystują dostępne miejsce, zapewniając jednocześnie funkcjonalność.
+        Wierzę, że kluczem do udanego projektu są przemyślane rozwiązania, które
+        odpowiadają na potrzeby użytkowników, a równowaga między praktycznością
+        a estetyką to fundament każdego projektu.
+      </div>
+      <div class="py-4 subtitle">W czym mogę Ci pomóc?</div>
+      <div>
+        Projektowanie wnętrz jest moją pasją, a moja praca cechuje się
+        sumiennością, kreatywnością i ambicją. Tworzę przestrzenie, które są nie
+        tylko piękne i praktyczne, ale także spójne i idealnie dopasowane do
+        oczekiwań Klienta. Każdy element wnętrza, który projektuję, stanowi
+        integralną część harmonijnej całości. Podstawą udanej współpracy jest
+        dla mnie dobra komunikacja i wzajemne zrozumienie. Swoje usługi kieruję
+        do osób, które doceniają wyjątkowy design i oryginalne rozwiązania.
+      </div>
+      <div class="py-4 subtitle">Jak pracuję?</div>
+      <div>
+        Każdy projekt zaczynam od rozmowy z Klientem - zadaję dużo szczegółowych
+        pytań, aby jak najlepiej poznać styl oraz preferencje Klienta. Ustalamy
+        wytyczne projektowe, omawiamy inspiracje. Jeśli Klient mieszka w
+        Krakowie, Mielcu lub okolicach spotykamy się osobiście; w przypadku
+        innych lokalizacji organizujemy spotkanie online. Następnie podsumowuję
+        nasze ustalenia i przesyłam Klientowi do zatwierdzenia lub
+        uzupełnienia.<br /><br />
+        Kolejnym krokiem jest przeprowadzenie inwentaryzacji, czyli dokładnego
+        pomiaru budynku lub mieszkania. Pomiary wykonuję dalmierzem laserowym i
+        nanoszę je na odręczne rysunki. Jeśli projekt realizujemy bez
+        inwentaryzacji, ten krok pomijamy, jednak w zamian potrzebuję rzutu od
+        dewelopera.<br /><br />
+        Po ustaleniach i opracowaniu rzutu przygotowuję rzuty funkcjonalne,
+        czyli płaskie rysunki przedstawiające przyszły układ pomieszczeń i
+        mebli. Zwykle opracowuję 3-4 warianty takich rzutów. Po wybraniu przez
+        klienta jednego z nich przechodzimy do etapu wizualizacji.<br /><br />
+        Wizualizacje pokazują przyszły wygląd wnętrza - są to realistyczne
+        obrazy, które wyglądają niemal jak zdjęcia. Po zapoznaniu się z
+        wizualizacjami klient może je zaakceptować lub zgłosić poprawki, które
+        następnie wdrażam, aby efekt w pełni odpowiadał oczekiwaniom.<br /><br />
+        Ostatnim etapem kompleksowego projektu wnętrz są rysunki wykonawcze,
+        tworzone po zatwierdzeniu wizualizacji. Przedstawiają one projekt w
+        sposób umożliwiający realizację przez wykonawców bez dodatkowych pytań,
+        zawierając dokładne wymiary, lokalizację i materiały wszystkich
+        elementów. Równolegle opracowuję specyfikację wyposażenia, która
+        obejmuje linki do sklepów i ilość wszystkich materiałów użytych w
+        projekcie.
+      </div>
     </div>
   </div>
 </div>
