--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -2,18 +2,22 @@
   <div class="container g-0">
     <div class="row g-0 py-5">
       <div class="col-12 col-md-6 img-preview-container">
-          <img class="img-preview" ngSrc="offer-preview/offer-preview.avif" fill>
+        <img
+          class="img-preview"
+          ngSrc="offer-preview/offer-preview.avif"
+          fill
+        />
       </div>
       <div class="col-12 col-md-6 p-5 pb-0">
         <div class="title pb-3">Oferta</div>
         <div class="pb-3 caption">
-            Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza.
-            Jedno mieszkanie można urządzić na wiele sposobów, łącząc różne style
-            i funkcje. Dlatego oferuję różnorodne opcje projektów wnętrz, które
-            pozwolą dostosować moją ofertę do Twoich indywidualnych oczekiwań. Bez
-            względu na to, jakiego efektu szukasz - minimalistycznego,
-            nowoczesnego czy klasycznego - znajdziemy rozwiązanie, które najlepiej
-            odpowiada Twoim potrzebom i marzeniom.
+          Każdy z nas ma unikalne potrzeby i własne wizje wymarzonego wnętrza.
+          Jedno mieszkanie można urządzić na wiele sposobów, łącząc różne style
+          i funkcje. Dlatego oferuję różnorodne opcje projektów wnętrz, które
+          pozwolą dostosować moją ofertę do Twoich indywidualnych oczekiwań. Bez
+          względu na to, jakiego efektu szukasz - minimalistycznego,
+          nowoczesnego czy klasycznego - znajdziemy rozwiązanie, które najlepiej
+          odpowiada Twoim potrzebom i marzeniom.
         </div>
         <div class="d-flex flex-column align-items-center">
           <button [routerLink]="[offerPath]">Poznaj ofertę</button>
