--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid g-0">
   <div class="row d-flex justify-content-center g-0">
     <div class="img-header-container">
-      <img class="img-header" ngSrc="offer/offer.avif" fill priority>
+      <img class="img-header" ngSrc="offer/offer.avif" fill priority />
       <div class="text-center pt-5 header-title">Oferta</div>
     </div>
     <div class="row pt-4 pb-5 d-flex offer-container">
