--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,153 +1,153 @@
 <div class="container-fluid py-5 g-0">
-    <div class="container py-5 g-0">
-      <div class="d-flex justify-content-center title privacy-policy">
-        Polityka prywatności
-      </div>
-      <div class="pt-3 px-5 subtitle">I. Postanowienia ogólne</div>
-      <div class="py-3 px-5 caption">
-        1. Niniejsza Polityka ochrony prywatności określa sposób zbierania,
-        przetwarzania i przechowywania danych osobowych za pośrednictwem serwisu
-        internetowego w domenie www.legalnyhr.pl (dalej: Serwis). <br />2.
-        Administratorem danych osobowych użytkowników jest Simona Lorenc,
-        prowadząca działalność gospodarczą pod firmą Simona Lorenc Concept, NIP: 6772486000, REGON: 523566716 (dalej:
-        Administrator). <br />Dane kontaktowe:
-        <ul>
-          <li>Administrator: Simona Lorenc</li>
-          <li>
-            Adres do korespondencji: ul.Bartosza Głowackiego 12/64, 30-085 Kraków
-          </li>
-          <li>Adres mailowy: slorenc.concept&#64;gmail.com</li>
-          <li>Numer kontaktowy: +48 793 733 350</li>
-        </ul>
-        3. Dane osobowe przetwarzane są zgodnie z Rozporządzeniem Parlamentu
-        Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie
-        ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w
-        sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy
-        95/46/WE (ogólne rozporządzenie o ochronie danych) (dalej: RODO). <br />4.
-        Zbierane przez Administratora dane będą: - przetwarzane zgodnie z prawem,
-        - przetwarzane w wyraźnie określonych celach i niepoddawane dalszemu
-        przetwarzaniu niezgodnemu z tymi celami, - merytorycznie poprawne i
-        adekwatne w stosunku do celów, w jakich są przetwarzane, - przechowywane
-        nie dłużej niż jest to niezbędne do osiągnięcia celu przetwarzania.
-      </div>
-      <div class="px-5 subtitle">
-        II. Cel i podstawy prawne przetwarzania danych
-      </div>
-      <div class="py-3 px-5 caption">
-        1. Administrator przetwarza dane osobowe niezbędne do świadczenia i
-        rozwoju oferowanych usług dostępnych za pośrednictwem Serwisu oraz
-        poszczególnych jego funkcjonalności. <br />2. Dane osobowe przetwarzane
-        będą w następujących celach:
-        <ul class="list">
-          <li>
-            a. realizacji umowy o świadczeniu usług drogą elektroniczną zgodnie z
-            ustawą z dnia 18 lipca 2002 r. o świadczeniu usług drogą
-            elektroniczną;
-          </li>
-          <li>
-            b. komunikacji z użytkownikiem w celu dostarczeniu mu niezbędnych
-            informacji oraz budowania pozytywnych i rzetelnych relacji z Nim, co
-            stanowi prawnie uzasadniony interes Administratora;
-          </li>
-          <li>
-            c. promowania przez Administratora produktów i/lub usług własnych
-            poprzez kierowanie drogą elektroniczną Informacji marketingowych, o
-            ile Użytkownik wyraził zgodę na otrzymywanie takich powiadomień za
-            pośrednictwem e-mail;
-          </li>
-          <li>
-            d. ewentualnego ustalenia, dochodzenia roszczeń lub obrony przed nimi
-            na podstawie prawnie uzasadnionego interesu Administratora
-            polegającego na ochronie jego praw.
-          </li>
-        </ul>
-        <br />3. W każdym z wymienionych powyżej przypadków (ust 2) podanie danych
-        jest dobrowolne, jednak konieczne do zawarcia umowy lub skorzystania z
-        innych funkcjonalności Serwisu.
-      </div>
-      <div class="px-5 subtitle">III. Okres przetwarzania danych osobowych</div>
-      <div class="py-3 px-5 caption">
-        1. Dane osobowe będą przetwarzane przez okres niezbędny do zachowania
-        zgodności z przepisami prawa, dochodzenia lub obrony przed ewentualnymi
-        roszczeniami. <br />2. Dane przetwarzane na podstawie zgody będą
-        przetwarzane do czasu wycofania udzielonej zgody z zastrzeżeniem, że
-        wycofanie tej zgody nie ma wpływu na zgodność przetwarzania danych,
-        którego dokonano przed tym wycofaniem.
-      </div>
-      <div class="px-5 subtitle">IV. Informacje o przetwarzaniu</div>
-      <div class="py-3 px-5 caption">
-        Dane osobowe w zależności od celu przetwarzania mogą zostać ujawnione:
-        <ul class="list">
-          <li>a. podmiotom powiązanym z Administratorem,</li>
-          <li>b. podmiotom współpracującym z Administratorem,</li>
-          <li>
-            c. podwykonawcom, w szczególności podmiotom dostarczającym i
-            obsługującym wybrane systemy i rozwiązania informatyczne,
-          </li>
-          <li>d. podmiotom obsługującym płatności internetowe,</li>
-          <li>e. podmiotom świadczącym usługi kuriersko-pocztowe,</li>
-          <li>f. kancelariom prawnym.</li>
-        </ul>
-      </div>
-      <div class="px-5 subtitle">V. Prawa osób, których dane dotyczą</div>
-      <div class="py-3 px-5 caption">
-        1. Użytkownik Serwisu ma prawo: - dostępu do treści swoich danych
-        osobowych - sprostowania danych - usunięcia danych - ograniczenia
-        przetwarzania danych - przenoszenia danych - wniesienia sprzeciwu wobec
-        przetwarzania odbywającego się na podstawie prawienie usprawiedliwionego
-        interesu administratora - wycofania zgody w dowolnym momencie bez wpływu
-        na zgodność z prawem przetwarzania, którego dokonano na podstawie tej
-        zgody przed jej wycofaniem <br />2. Użytkownik ma prawo do wniesienia
-        skargi do Prezesa Urzędu Ochrony Danych Osobowych w sytuacji, w której
-        uzna, że przetwarzanie narusza jego prawa i wolności. <br />3. W stosunku
-        do Ciebie mogą być podejmowane czynności polegające na zautomatyzowanym
-        podejmowaniu decyzji, w tym profilowaniu w celu świadczenia usług w ramach
-        zawartej umowy oraz w celu prowadzenia przez Administratora marketingu
-        bezpośredniego. <br />Dane osobowe nie są przekazywane do krajów trzecich
-        w rozumieniu przepisów o ochronie danych osobowych. Oznacza to, że nie
-        przesyłamy ich poza teren Unii Europejskiej.
-      </div>
-      <div class="px-5 subtitle">VI. Informacja o plikach cookies</div>
-      <div class="py-3 px-5 caption">
-        1. Serwis korzysta z plików cookies. Pliki cookies (tzw. “ciasteczka”)
-        stanowią dane informatyczne, w szczególności pliki tekstowe, które
-        przechowywane są w urządzeniu końcowym użytkownika Serwisu i przeznaczone
-        są do korzystania ze stron internetowych Serwisu. Cookies zazwyczaj
-        zawierają nazwę strony internetowej, z której pochodzą, czas
-        przechowywania ich na urządzeniu końcowym oraz unikalny numer. Podmiotem
-        zamieszczającym na urządzeniu końcowym użytkownika Serwisu pliki cookies
-        oraz uzyskującym do nich dostęp jest operator Serwisu. <br />2. W ramach
-        Serwisu stosowane są dwa zasadnicze rodzaje plików cookies: “sesyjne:”
-        (session cookies) oraz “stałe” (persistent cookies). Cookies “sesyjne” są
-        plikami tymczasowymi, które przechowywane są w urządzeniu końcowym
-        użytkownika do czasu wylogowania, opuszczenia strony internetowej lub
-        wyłączenia oprogramowania (przeglądarki internetowej). “Stałe” pliki
-        cookies przechowywane są w urządzeniu końcowym użytkownika przez czas
-        określony w parametrach plików cookies lub do czasu ich usunięcia przez
-        użytkownika. <br />3. Oprogramowanie do przeglądania stron internetowych
-        (przeglądarka internetowa) zazwyczaj domyślnie dopuszcza przechowywanie
-        plików cookies w urządzeniu końcowym użytkownika. Użytkownicy Serwisu mogą
-        dokonać zmiany ustawień w tym zakresie. Przeglądarka internetowa umożliwia
-        usunięcie plików cookies. Możliwe jest także automatyczne blokowanie
-        plików cookies Szczegółowe informacje na ten temat zawiera pomoc lub
-        dokumentacja przeglądarki internetowej. Ograniczenia stosowania plików
-        cookies mogą wpłynąć na niektóre funkcjonalności dostępne na stronach
-        internetowych Serwisu. <br />4. Jeśli użytkownik nie chce otrzymywać
-        plików cookies, może zmienić ustawienia przeglądarki. Zastrzegamy, że
-        wyłączenie obsługi plików cookies niezbędnych dla procesów
-        uwierzytelniania, bezpieczeństwa, utrzymania preferencji użytkownika może
-        utrudnić, a w skrajnych przypadkach może uniemożliwić korzystanie ze stron
-        www.W celu zarządzania ustawienia cookies wybierz z listy poniżej
-        przeglądarkę internetową, której używasz i postępuj zgodnie z
-        instrukcjami:
-        <ul class="mb-0">
-          <li>Microsoft(Edge, Internet Explorer)</li>
-          <li>Google Chrome</li>
-          <li>Safari</li>
-          <li>Mozilla Firefox</li>
-          <li>Opera</li>
-        </ul>
-      </div>
+  <div class="container py-5 g-0">
+    <div class="d-flex justify-content-center title privacy-policy">
+      Polityka prywatności
+    </div>
+    <div class="pt-3 px-5 subtitle">I. Postanowienia ogólne</div>
+    <div class="py-3 px-5 caption">
+      1. Niniejsza Polityka ochrony prywatności określa sposób zbierania,
+      przetwarzania i przechowywania danych osobowych za pośrednictwem serwisu
+      internetowego w domenie www.legalnyhr.pl (dalej: Serwis). <br />2.
+      Administratorem danych osobowych użytkowników jest Simona Lorenc,
+      prowadząca działalność gospodarczą pod firmą Simona Lorenc Concept, NIP:
+      6772486000, REGON: 523566716 (dalej: Administrator). <br />Dane
+      kontaktowe:
+      <ul>
+        <li>Administrator: Simona Lorenc</li>
+        <li>
+          Adres do korespondencji: ul.Bartosza Głowackiego 12/64, 30-085 Kraków
+        </li>
+        <li>Adres mailowy: slorenc.concept&#64;gmail.com</li>
+        <li>Numer kontaktowy: +48 793 733 350</li>
+      </ul>
+      3. Dane osobowe przetwarzane są zgodnie z Rozporządzeniem Parlamentu
+      Europejskiego i Rady (UE) 2016/679 z dnia 27 kwietnia 2016 r. w sprawie
+      ochrony osób fizycznych w związku z przetwarzaniem danych osobowych i w
+      sprawie swobodnego przepływu takich danych oraz uchylenia dyrektywy
+      95/46/WE (ogólne rozporządzenie o ochronie danych) (dalej: RODO). <br />4.
+      Zbierane przez Administratora dane będą: - przetwarzane zgodnie z prawem,
+      - przetwarzane w wyraźnie określonych celach i niepoddawane dalszemu
+      przetwarzaniu niezgodnemu z tymi celami, - merytorycznie poprawne i
+      adekwatne w stosunku do celów, w jakich są przetwarzane, - przechowywane
+      nie dłużej niż jest to niezbędne do osiągnięcia celu przetwarzania.
+    </div>
+    <div class="px-5 subtitle">
+      II. Cel i podstawy prawne przetwarzania danych
+    </div>
+    <div class="py-3 px-5 caption">
+      1. Administrator przetwarza dane osobowe niezbędne do świadczenia i
+      rozwoju oferowanych usług dostępnych za pośrednictwem Serwisu oraz
+      poszczególnych jego funkcjonalności. <br />2. Dane osobowe przetwarzane
+      będą w następujących celach:
+      <ul class="list">
+        <li>
+          a. realizacji umowy o świadczeniu usług drogą elektroniczną zgodnie z
+          ustawą z dnia 18 lipca 2002 r. o świadczeniu usług drogą
+          elektroniczną;
+        </li>
+        <li>
+          b. komunikacji z użytkownikiem w celu dostarczeniu mu niezbędnych
+          informacji oraz budowania pozytywnych i rzetelnych relacji z Nim, co
+          stanowi prawnie uzasadniony interes Administratora;
+        </li>
+        <li>
+          c. promowania przez Administratora produktów i/lub usług własnych
+          poprzez kierowanie drogą elektroniczną Informacji marketingowych, o
+          ile Użytkownik wyraził zgodę na otrzymywanie takich powiadomień za
+          pośrednictwem e-mail;
+        </li>
+        <li>
+          d. ewentualnego ustalenia, dochodzenia roszczeń lub obrony przed nimi
+          na podstawie prawnie uzasadnionego interesu Administratora
+          polegającego na ochronie jego praw.
+        </li>
+      </ul>
+      <br />3. W każdym z wymienionych powyżej przypadków (ust 2) podanie danych
+      jest dobrowolne, jednak konieczne do zawarcia umowy lub skorzystania z
+      innych funkcjonalności Serwisu.
+    </div>
+    <div class="px-5 subtitle">III. Okres przetwarzania danych osobowych</div>
+    <div class="py-3 px-5 caption">
+      1. Dane osobowe będą przetwarzane przez okres niezbędny do zachowania
+      zgodności z przepisami prawa, dochodzenia lub obrony przed ewentualnymi
+      roszczeniami. <br />2. Dane przetwarzane na podstawie zgody będą
+      przetwarzane do czasu wycofania udzielonej zgody z zastrzeżeniem, że
+      wycofanie tej zgody nie ma wpływu na zgodność przetwarzania danych,
+      którego dokonano przed tym wycofaniem.
+    </div>
+    <div class="px-5 subtitle">IV. Informacje o przetwarzaniu</div>
+    <div class="py-3 px-5 caption">
+      Dane osobowe w zależności od celu przetwarzania mogą zostać ujawnione:
+      <ul class="list">
+        <li>a. podmiotom powiązanym z Administratorem,</li>
+        <li>b. podmiotom współpracującym z Administratorem,</li>
+        <li>
+          c. podwykonawcom, w szczególności podmiotom dostarczającym i
+          obsługującym wybrane systemy i rozwiązania informatyczne,
+        </li>
+        <li>d. podmiotom obsługującym płatności internetowe,</li>
+        <li>e. podmiotom świadczącym usługi kuriersko-pocztowe,</li>
+        <li>f. kancelariom prawnym.</li>
+      </ul>
+    </div>
+    <div class="px-5 subtitle">V. Prawa osób, których dane dotyczą</div>
+    <div class="py-3 px-5 caption">
+      1. Użytkownik Serwisu ma prawo: - dostępu do treści swoich danych
+      osobowych - sprostowania danych - usunięcia danych - ograniczenia
+      przetwarzania danych - przenoszenia danych - wniesienia sprzeciwu wobec
+      przetwarzania odbywającego się na podstawie prawienie usprawiedliwionego
+      interesu administratora - wycofania zgody w dowolnym momencie bez wpływu
+      na zgodność z prawem przetwarzania, którego dokonano na podstawie tej
+      zgody przed jej wycofaniem <br />2. Użytkownik ma prawo do wniesienia
+      skargi do Prezesa Urzędu Ochrony Danych Osobowych w sytuacji, w której
+      uzna, że przetwarzanie narusza jego prawa i wolności. <br />3. W stosunku
+      do Ciebie mogą być podejmowane czynności polegające na zautomatyzowanym
+      podejmowaniu decyzji, w tym profilowaniu w celu świadczenia usług w ramach
+      zawartej umowy oraz w celu prowadzenia przez Administratora marketingu
+      bezpośredniego. <br />Dane osobowe nie są przekazywane do krajów trzecich
+      w rozumieniu przepisów o ochronie danych osobowych. Oznacza to, że nie
+      przesyłamy ich poza teren Unii Europejskiej.
+    </div>
+    <div class="px-5 subtitle">VI. Informacja o plikach cookies</div>
+    <div class="py-3 px-5 caption">
+      1. Serwis korzysta z plików cookies. Pliki cookies (tzw. “ciasteczka”)
+      stanowią dane informatyczne, w szczególności pliki tekstowe, które
+      przechowywane są w urządzeniu końcowym użytkownika Serwisu i przeznaczone
+      są do korzystania ze stron internetowych Serwisu. Cookies zazwyczaj
+      zawierają nazwę strony internetowej, z której pochodzą, czas
+      przechowywania ich na urządzeniu końcowym oraz unikalny numer. Podmiotem
+      zamieszczającym na urządzeniu końcowym użytkownika Serwisu pliki cookies
+      oraz uzyskującym do nich dostęp jest operator Serwisu. <br />2. W ramach
+      Serwisu stosowane są dwa zasadnicze rodzaje plików cookies: “sesyjne:”
+      (session cookies) oraz “stałe” (persistent cookies). Cookies “sesyjne” są
+      plikami tymczasowymi, które przechowywane są w urządzeniu końcowym
+      użytkownika do czasu wylogowania, opuszczenia strony internetowej lub
+      wyłączenia oprogramowania (przeglądarki internetowej). “Stałe” pliki
+      cookies przechowywane są w urządzeniu końcowym użytkownika przez czas
+      określony w parametrach plików cookies lub do czasu ich usunięcia przez
+      użytkownika. <br />3. Oprogramowanie do przeglądania stron internetowych
+      (przeglądarka internetowa) zazwyczaj domyślnie dopuszcza przechowywanie
+      plików cookies w urządzeniu końcowym użytkownika. Użytkownicy Serwisu mogą
+      dokonać zmiany ustawień w tym zakresie. Przeglądarka internetowa umożliwia
+      usunięcie plików cookies. Możliwe jest także automatyczne blokowanie
+      plików cookies Szczegółowe informacje na ten temat zawiera pomoc lub
+      dokumentacja przeglądarki internetowej. Ograniczenia stosowania plików
+      cookies mogą wpłynąć na niektóre funkcjonalności dostępne na stronach
+      internetowych Serwisu. <br />4. Jeśli użytkownik nie chce otrzymywać
+      plików cookies, może zmienić ustawienia przeglądarki. Zastrzegamy, że
+      wyłączenie obsługi plików cookies niezbędnych dla procesów
+      uwierzytelniania, bezpieczeństwa, utrzymania preferencji użytkownika może
+      utrudnić, a w skrajnych przypadkach może uniemożliwić korzystanie ze stron
+      www.W celu zarządzania ustawienia cookies wybierz z listy poniżej
+      przeglądarkę internetową, której używasz i postępuj zgodnie z
+      instrukcjami:
+      <ul class="mb-0">
+        <li>Microsoft(Edge, Internet Explorer)</li>
+        <li>Google Chrome</li>
+        <li>Safari</li>
+        <li>Mozilla Firefox</li>
+        <li>Opera</li>
+      </ul>
     </div>
   </div>
-  
+</div>
