--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -5,14 +5,20 @@
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
         <div class="pb-3 caption text-container">
-            Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a doświadczenie zdobywałam, pracując dla polskich i zagranicznych pracowni architektonicznych. Moim celem jest tworzenie przestrzeni, które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga między praktycznością a estetyką to fundament każdego projektu.<br><br>
+          Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
+          doświadczenie zdobywałam, pracując dla polskich i zagranicznych
+          pracowni architektonicznych. Moim celem jest tworzenie przestrzeni,
+          które w pełni wykorzystują dostępne miejsce, zapewniając jednocześnie
+          funkcjonalność. Wierzę, że kluczem do udanego projektu są przemyślane
+          rozwiązania, które odpowiadają na potrzeby użytkowników, a równowaga
+          między praktycznością a estetyką to fundament każdego projektu.<br /><br />
         </div>
         <div class="d-flex flex-column align-items-center">
-            <button [routerLink]="aboutMePath">Zobacz więcej</button>
+          <button [routerLink]="aboutMePath">Zobacz więcej</button>
         </div>
       </div>
       <div class="col-md-6 col-12 order-md-2 order-1 img-preview-container">
-        <img class="img-preview" ngSrc="about-me/about-me.avif" fill>
+        <img class="img-preview" ngSrc="about-me/about-me.avif" fill />
       </div>
     </div>
   </div>
