--- a/src/app/contact-preview/contact-preview.component.html
+++ b/src/app/contact-preview/contact-preview.component.html
@@ -2,12 +2,14 @@
   <div class="container g-0">
     <div class="row g-0 py-5 d-flex justify-content-center">
       <div class="col-md-6 col-12 pb-5 img-preview-container">
-        <img class="img-preview" ngSrc="contact/contact-preview.avif" fill>
+        <img class="img-preview" ngSrc="contact/contact-preview.avif" fill />
       </div>
       <div class="col-md-6 col-12 p-5 pb-0">
         <div class="title pb-3">Kontakt</div>
         <div class="pb-5 caption">
-            Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z Krakowa, Mielca lub okolic, chętnie się spotkam i poznam Twoje oczekiwania.
+          Zapraszam do kontaktu telefonicznego lub mailowego. Jeśli jesteś z
+          Krakowa, Mielca lub okolic, chętnie się spotkam i poznam Twoje
+          oczekiwania.
         </div>
         <div class="d-flex flex-column align-items-center">
           <button (click)="onClickContact()">Przejdź do kontaktu</button>
