--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,33 +1,35 @@
 <nav class="navbar" [@transparentBackground]="isTransparent ? 'true' : 'false'">
-    <div class="container-fluid g-0 d-flex justify-content-between caption">
-      <div class="d-flex align-items-center logo-container">
-        <img
+  <div class="container-fluid g-0 d-flex justify-content-between caption">
+    <div class="d-flex align-items-center logo-container">
+      <img
         src="header/short_logo.svg"
         class="p-3 logo pointer"
         [routerLink]="mainPath"
         alt="logo"
       />
-      </div>
-      <div class="d-flex d-lg-none me-2 pointer icon-menu" (click)="toggleCollapse()">
-        <img src="{{ toggleIcon }}" class="icon" alt="menu" />
     </div>
-      <div class="d-none d-lg-flex align-items-center mx-4">
-        <a class="mx-4 pointer" [routerLink]="mainPath">Home</a>
-        <a class="mx-4 pointer" [routerLink]="aboutMePath">O mnie</a>
-        <a class="mx-4 pointer" [routerLink]="portfolioPath">Portfolio</a>
-        <a class="mx-4 pointer" [routerLink]="offerPath">Oferta</a>
-        <a class="mx-4 pointer" (click)="onClickContact()">Kontakt</a>
-      </div>
-      <div *ngIf="!isCollapsed" class="me-4 pt-5 nav-list" @slideToggle>
-        <div class="d-flex flex-column">
-          <a class="mx-4 mt-5 pointer" [routerLink]="mainPath">Home</a>
-          <a class="mx-4 mt-5 pointer" [routerLink]="aboutMePath">O mnie</a>
-          <a class="mx-4 mt-5 pointer" [routerLink]="portfolioPath">Portfolio</a>
-          <a class="mx-4 mt-5 pointer" [routerLink]="offerPath">Oferta</a>
-          <a class="mx-4 my-5 pointer" (click)="onClickContact()">Kontakt</a>
-        </div>
+    <div
+      class="d-flex d-lg-none me-2 pointer icon-menu"
+      (click)="toggleCollapse()"
+    >
+      <img src="{{ toggleIcon }}" class="icon" alt="menu" />
+    </div>
+    <div class="d-none d-lg-flex align-items-center mx-4">
+      <a class="mx-4 pointer" [routerLink]="mainPath">Home</a>
+      <a class="mx-4 pointer" [routerLink]="aboutMePath">O mnie</a>
+      <a class="mx-4 pointer" [routerLink]="portfolioPath">Portfolio</a>
+      <a class="mx-4 pointer" [routerLink]="offerPath">Oferta</a>
+      <a class="mx-4 pointer" (click)="onClickContact()">Kontakt</a>
+    </div>
+    <div *ngIf="!isCollapsed" class="me-4 pt-5 nav-list" @slideToggle>
+      <div class="d-flex flex-column">
+        <a class="mx-4 mt-5 pointer" [routerLink]="mainPath">Home</a>
+        <a class="mx-4 mt-5 pointer" [routerLink]="aboutMePath">O mnie</a>
+        <a class="mx-4 mt-5 pointer" [routerLink]="portfolioPath">Portfolio</a>
+        <a class="mx-4 mt-5 pointer" [routerLink]="offerPath">Oferta</a>
+        <a class="mx-4 my-5 pointer" (click)="onClickContact()">Kontakt</a>
       </div>
     </div>
-  </nav>
-  <div [class.dim-background]="!isCollapsed"></div>
-  
+  </div>
+</nav>
+<div [class.dim-background]="!isCollapsed"></div>
