--- a/src/app/portfolio-detail/portfolio-detail.component.html
+++ b/src/app/portfolio-detail/portfolio-detail.component.html
@@ -3,18 +3,9 @@
     <div class="pt-5">
       <div class="text-center pt-5 title">{{ projectTitle }}</div>
     </div>
-    <div
-      class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between"
-    >
-      <div
-        *ngFor="let image of images"
-        class="col-12 col-md-6 col-xl-4 py-4"
-      >
-        <img
-          [src]="image.imageUrl"
-          class=""
-          [alt]=""
-        />
+    <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between">
+      <div *ngFor="let image of images" class="col-12 col-md-6 col-xl-4 py-4">
+        <img [src]="image.imageUrl" class="" [alt]="" />
       </div>
     </div>
     <div class="row p-5 d-flex offer-container">
