--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 @use "../src/styles/global" as global;
 @import "bootstrap/scss/bootstrap-grid";
 @import url("https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 * {
   font-family: "Roboto", sans-serif;
-  // outline: 1px solid red; 
+  // outline: 1px solid red;
 }
 
 html {
@@ -59,7 +59,11 @@ body {
   bottom: 0;
   width: 100%;
   height: 30px;
-  background: linear-gradient(360deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(
+    360deg,
+    rgba(0, 0, 0, 0.15) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
 }
 
 .img-preview-container {
