--- a/src/app/about-me-preview/about-me-preview.component.html
+++ b/src/app/about-me-preview/about-me-preview.component.html
@@ -4,7 +4,7 @@
       <div class="col-md-6 col-12 order-md-1 order-2 p-5 pb-0 ps-5 ps-md-0">
         <div class="title pb-3">O mnie</div>
         <div class="subtitle pb-3">mgr inż. arch. Simona Lorenc</div>
-        <div class="pb-3 caption text-container">
+        <div class="pb-3 caption text-justify">
           Jestem absolwentką Wydziału Architektury Politechniki Krakowskiej, a
           doświadczenie zdobywałam, pracując dla polskich i zagranicznych
           pracowni architektonicznych. Moim celem jest tworzenie przestrzeni,
