--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,10 @@ body {
   text-align: center;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .pointer {
   cursor: pointer;
 }
@@ -103,6 +107,22 @@ body {
   top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+button {
+  background-color: transparent;
+  color: global.$background-primary;
+  padding: 10px 20px;
+  border: 1px solid global.$background-primary;
+  border-radius: 25px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: global.$background-primary;
+  color: global.$background-light;
 }
 
 @media (max-width: 1199.98px) {
