Fix page margin

--- a/src/app/offer/offer.component.html
+++ b/src/app/offer/offer.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid g-0">
-  <div class="row d-flex justify-content-center g-0">
-    <div class="img-header-container">
-      <img class="img-header" ngSrc="offer/offer.avif" fill priority />
-      <div class="text-center pt-5 header-title">Oferta</div>
-    </div>
-    <div class="row pt-4 pb-5 d-flex offer-container">
-      <div class="col-12 col-md-6 px-5 border-right">
+  <div class="img-header-container">
+    <img class="img-header" ngSrc="offer/offer.avif" fill />
+    <div class="text-center pt-5 header-title">Oferta</div>
+  </div>
+  <div class="container g-0">
+    <div class="row pt-4 pb-5 d-flex">
+      <div class="col-12 col-md-6 px-4 border-right">
         <div class="text-center py-4 subtitle">Projekt koncepcyjny</div>
         <div class="caption">
           Jest to idealne rozwiązanie do projektowania pojedynczych pomieszczeń,
@@ -29,7 +29,7 @@
           <li>◦ &nbsp;&nbsp;&nbsp;&nbsp;lista wyposażenia</li>
         </ul>
       </div>
-      <div class="col-12 col-md-6 px-5">
+      <div class="col-12 col-md-6 px-4">
         <div class="text-center py-4 subtitle">Projekt kompleksowy</div>
         <div class="caption">
           To rozwiązanie najlepiej sprawdza się, gdy potrzebujesz przekazać
