--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -4,3 +4,34 @@
   background-color: global.$background-light;
   color: global.$background-primary;
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out; 
+}
+
+.overlay-text {
+  color: white;
+  font-size: 1.25rem;
+  text-align: center;
+  padding: 0.5rem;
+  transform: translateY(25%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.img-preview-container:hover .overlay {
+  opacity: 1;
+}
+
+.img-preview-container:hover .overlay-text {
+  transform: translateY(0);
+}
