--- a/src/app/portfolio-detail/portfolio-detail.component.html
+++ b/src/app/portfolio-detail/portfolio-detail.component.html
@@ -1,12 +1,16 @@
 <div class="container-fluid g-0">
-  <div class="row pt-5 d-flex justify-content-center g-0">
-    <div class="pt-5">
-      <div class="text-center pt-5 title">{{ projectTitle }}</div>
-    </div>
-    <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-between">
-      <div *ngFor="let image of images" class="col-12 col-md-6 col-xl-4 py-4">
-        <img [src]="image.imageUrl" class="" [alt]="" />
+  <div class="container g-0">
+    <div class="row pt-5 justify-content-center">
+      <div class="pt-5">
+        <div class="text-center pt-5 title">{{ title }}</div>
       </div>
+
+      <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-center">
+        <div *ngFor="let image of images" class="col-12 img-container">
+          <img [ngSrc]="image" class="img" [alt]="" fill />
+        </div>
+      </div>
+
     </div>
   </div>
 </div>
