--- a/src/app/portfolio-preview/portfolio-preview.component.html
+++ b/src/app/portfolio-preview/portfolio-preview.component.html
@@ -5,7 +5,7 @@
         PROJEKTUJEMY MARZENIA, NIE TYLKO WNĘTRZA
       </div>
       <div class="col-12 pt-3 text-center caption">
-        Stworzymy dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
+        Stworzę dla Ciebie wnętrza, które odzwierciedlą Twój styl, łącząc
         estetykę z funkcjonalnością w spójną i zachwycającą całość
       </div>
       <div class="row col-12 py-4 justify-content-center">
