--- a/src/app/offer-preview/offer-preview.component.html
+++ b/src/app/offer-preview/offer-preview.component.html
@@ -16,7 +16,7 @@
           i funkcje. Dlatego oferuję różnorodne opcje projektów wnętrz, które
           pozwolą dostosować moją ofertę do Twoich indywidualnych oczekiwań. Bez
           względu na to, jakiego efektu szukasz - minimalistycznego,
-          nowoczesnego czy klasycznego - znajdziemy rozwiązanie, które najlepiej
+          nowoczesnego czy klasycznego - znajdę rozwiązanie, które najlepiej
           odpowiada Twoim potrzebom i marzeniom.
         </div>
         <div class="d-flex flex-column align-items-center">
