--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,26 +1,22 @@
 <div class="container-fluid g-0">
   <img class="image" ngSrc="footer/footer-background.avif" fill />
   <div class="container g-0 d-flex flex-column justify-content-between">
-    <div
-      class="row mt-5 g-0 p-5 px-md-0 d-flex flex-column flex-md-row justify-content-between align-items-center text-center text-md-start"
-    >
-      <img src="header/logo.svg" class="p-3 mb-5 logo" alt="logo" />
-      <div class="col-12 col-md-4 d-flex flex-column">
-        <div class="subtitle pb-3">Kontakt</div>
-        <div>Simona Lorenc Concept</div>
-        <div class="d-flex flex-column">
-          <a class="pt-2" [href]="mailToLink"
-            >e-mail: slorenc.soncept&#64;gmail.com</a
-          >
-          <a class="pt-2" [href]="'tel:+48793733350'">tel.: +48 793 733 350</a>
-          <a
-            class="pt-2"
-            [href]="'https://www.instagram.com/slorenc.concept/'"
-            target="_blank"
-            >instagram</a
-          >
-        </div>
-      </div>
+    <div class="row p-5 d-flex justify-content-center text-center">
+      <div class="title pb-3">Skontaktuj się ze mną</div>
+      <img src="header/logo.svg" class="py-3 logo" alt="logo" />
+      <div class="contact-name pt-2">Simona Lorenc Concept</div>
+      <a class="caption pt-1" [href]="mailToLink"
+        >e-mail: slorenc.soncept&#64;gmail.com</a
+      >
+      <a class="caption pt-1" [href]="'tel:+48793733350'"
+        >tel.: +48 793 733 350</a
+      >
+      <a
+        class="caption pt-1"
+        [href]="'https://www.instagram.com/slorenc.concept/'"
+        target="_blank"
+        >instagram</a
+      >
     </div>
     <div
       class="d-flex flex-column container-border px-5 py-3 mx-5 mx-md-0 align-items-end"
