--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid g-0">
   <img class="image" ngSrc="footer/footer-background.avif" fill />
   <div class="container g-0 d-flex flex-column justify-content-between">
-    <div class="row p-5 d-flex justify-content-center text-center">
+    <div class="row p-5 g-0 d-flex justify-content-center text-center">
       <div class="title pb-3">Skontaktuj się ze mną</div>
       <img src="header/logo.svg" class="py-3 logo" alt="logo" />
       <div class="contact-name pt-2">Simona Lorenc Concept</div>
