--- a/src/app/portfolio-detail/portfolio-detail.component.html
+++ b/src/app/portfolio-detail/portfolio-detail.component.html
@@ -2,12 +2,12 @@
   <div class="container g-0">
     <div class="row pt-5 justify-content-center">
       <div class="pt-5">
-        <div class="text-center pt-5 title">{{ title }}</div>
+        <div class="text-center title">{{ title }}</div>
       </div>
-      <div class="row py-5 px-5 mx-3 mt-3 d-flex justify-content-center">
-        <lightgallery [settings]="settings">
-          <a *ngFor="let image of images" [href]="image" class="col-1">
-            <img [src]="image" class="img-thumb" />
+      <div class="p-5" *ngIf="isBrowser">
+        <lightgallery id="lightgallery" [settings]="settings">
+          <a *ngFor="let image of images" [href]="image" class="gallery-item">
+            <img [src]="image" class="img-responsive" />
           </a>
         </lightgallery>
       </div>
